@@ -178,9 +178,6 @@ static struct usb_urb urb;
 #define MAX_CABLES   4
 
 #define VID_TIGLUSB  0x0451     /* Texas Instruments, Inc.            */
-#define PID_TIGLUSB  0xE001     /* TI-GRAPH LINK USB (SilverLink)     */
-#define PID_TI89TM   0xE004     /* TI89 Titanium w/ embedded USB port */
-#define PID_TI84P    0xE008     /* TI84+ w/ embedded USB port         */
 
 #define TIGL_BULK_IN    0x81    /* IN  endpoint */
 #define TIGL_BULK_OUT   0x02    /* OUT endpoint */
@@ -729,7 +726,8 @@ static int raw_probe(CableHandle *h)
     for(i = 0; i < MAX_CABLES; i++)
     {
 	if(tigl_devices[h->address].pid == PID_TI89TM ||
-	   tigl_devices[h->address].pid == PID_TI84P)
+	   tigl_devices[h->address].pid == PID_TI84P ||
+	   tigl_devices[h->address].pid == PID_TI84P_SE)
 	    return 0;
     }    
 
